# bookstore

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
accounts/: admin.py  forms.py  models.py  tests.py  views.py
accounts/migrations/: 0001_initial.py
config/: settings.py  urls.py
pages/: tests.py
static/css/: base.css
templates/: _base.html  home.html
templates/registration/: signup.html
