[project]
name = "bookstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.6",
    "psycopg2-binary>=2.9.12",
    "environs[django]>=15.0.1",
    "django-crispy-forms>=2.6",
    "crispy-bootstrap5>=2026.3",
]

[tool.mypy]
# Ignore import errors
ignore_missing_imports = true

# Ignore type annotation
check_untyped_defs = false
disallow_untyped_defs = false

[tool.ruff.format]
# Quotation Style
quote-style = "double"
